--- a/index.html
+++ b/index.html
@@ -3,46 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles-pt3.css">
-  <title>Document</title>
+  <title>GLOBEFARMS VENTURES</title>
+  <link rel="icon" href="images/GLOBEFARM VENTURES LOGO.jpg" type="image/png">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="about-us">
-  <div class="container">
+  <header class="navbar">
+    <div class="logo-container">
+      <img class="logo" src="images/GLOBEFARM VENTURES LOGO.jpg" alt="Global Farms Logo">
+      <span class="company-name">
+        GLOBEFARMS<br> <span class="ventures-text">VENTURES</span>
+      </span>
+    </div>
+
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#products">Products</a>
+      <a href="#contact">Contact</a>
+      <a href="#purchase">Buy Now</a>
+    </nav>
+    <a href="#contact" class="cta">Get a Quote</a>
+  </header>
+
+  <section class="hero">
+    <h1>Premium Quality African Food Products</h1>
+    <p>Plantain Flour • Yam Flour • Garri • Cassava Flour • Palm Oil</p>
+
+    <a href="#products" class="btn-primary">Explore Products</a>
+  </section>
+
+  <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Globefarms Ventures (GLF FOOD) is an agro-allied enterprise committed to adding value to Nigeria’s agricultural wealth...</p>
-  </div>
-</section>
+    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including unripe plantain flour, palm oil, GLF Garri Ijebu, Yam flour (amala), and cassava flour(Lafu/White Amala).</p>
+    <p>Our products are carefully processed under strict hygiene and safety standards to preserve their nutritional value, freshness and taste, ensuring that they meet the needs of supermarkets, retail outlets, households and final consumers across Nigeria and beyond.</p>
+  </section>
 
-<section class="mission-vision">
-  <div class="container">
-    <div class="card">
-      <h3>Our Mission</h3>
-      <p>To promote food security, healthy living, and sustainable development...</p>
+  <section class="mission-vision">
+    <div class="container">
+      <div class="card">
+        <h2>Mission</h2>
+        <p>At GLF FOOD, we are driven by a mission to add value to Nigeria's rich agricultural resources by offering affordable, nutritious and well-packaged food products. Through innovation and quality assurance, we aim to promote food security, healthy living and sustainable consumption practices.</p>
+      </div>
+
+      <div class="card vision-card">
+        <h2>Our Vision</h2>
+        <p>We are committed to becoming a trusted household brand by consistently delivering products that reflect excellence, integrity and reliability.</p>
+      </div>
     </div>
-    <div class="card">
-      <h3>Our Vision</h3>
-      <p>To be a trusted brand driven by consistency and integrity...</p>
+  </section>
+
+  <section id="products" class="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <!-- <div class="carousel">
+
+      </div> -->
+      <div class="product-card">
+        Unripe Plantain Flour
+        <div class="track">
+          <img src="images/unripe-plantain-flour-images/plantain-flour-1.jpg" alt="">
+          <img src="images/unripe-plantain-flour-images/plantain-flour-2.jpg" alt="">
+          <img src="images/unripe-plantain-flour-images/plantain-flour-3.jpg" alt="">
+        </div>
+        <button class="prev">◀</button>
+        <button class="next">▶</button>
+      </div>
+      <div class="product-card">
+        Yam Flour
+        <div class="track">
+          <img src="images/yam-flour-images/yam-flour-1.jpg" alt="">
+          <img src="images/yam-flour-images/yam-flour-2.jpg" alt="">
+        </div>
+        <button class="prev">◀</button>
+        <button class="next">▶</button>
+      </div>
+      <div class="product-card">
+        Cassava Flour
+        <div class="track">
+          <img src="images/cassava-flour-images/cassava-flour-1.jpg" alt="">
+          <img src="images/cassava-flour-images/cassava-flour-2.jpg" alt="">
+          <img src="images/cassava-flour-images/cassava-flour-3.jpg" alt="">
+        </div>
+        <button class="prev">◀</button>
+        <button class="next">▶</button>
+      </div>
+      <div class="product-card">
+        Garri
+        <div class="track">
+          <img src="images/garri-images/garri-1.jpg" alt="">
+          <img src="images/garri-images/garri-2.jpg" alt="">
+          <img src="images/garri-images/garri-3.jpg" alt="">
+          <img src="images/garri-images/garri-4.jpg" alt="">
+          <img src="images/garri-images/garri-5.jpg" alt="">
+        </div>
+        <button class="prev">◀</button>
+        <button class="next">▶</button>
+      </div>
+      <div class="product-card">
+        Palm Oil
+        <div class="track">
+          <img src="images/palm-oil-images/palm-oil-1.jpg" alt="">
+          <img src="images/palm-oil-images/palm-oil-2.jpg" alt="">
+          <img src="images/palm-oil-images/palm-oil-3.jpg" alt="">
+          <img src="images/palm-oil-images/palm-oil-4.jpg" alt="">
+        </div>
+        <button class="prev">◀</button>
+        <button class="next">▶</button>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="product-showcase">
-  <h2>Our Products</h2>
-  <div class="product-grid">
-    <div class="product-card">Plantain Flour</div>
-    <div class="product-card">Yam Flour</div>
-    <div class="product-card">Garri (Ijebu)</div>
-    <div class="product-card">Cassava Flour</div>
-    <div class="product-card">Palm Oil</div>
-  </div>
-</section>
+  <button id="scrollTopBtn" title="Go to top">↑</button>
 
-<section class="cta">
-  <div class="container">
-    <h2>Ready to Taste Tradition?</h2>
-    <a href="#shop" class="cta-button">Explore Products</a>
-  </div>
-</section>
+  <script src="main.js"></script>
 </body>
 </html>
