Made site responsive

--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
       </span>
     </div>
 
-    <nav class="nav-links">
+    <!-- Hamburger menu icon (visibile onlu on mobile) -->
+     <button class="hamburger" id="hamburgerBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+     </button>
+
+    <nav class="nav-links" id="navMenu">
+      <!-- <button class="close-btn" id="closeBtn">✖</button> -->
       <a href="#">Home</a>
       <a href="#about">About</a>
       <a href="#products">Products</a>
       <a href="#contact">Contact</a>
       <a href="#purchase">Buy Now</a>
     </nav>
+    <div class="overlay" id="overlay"></div>
     <a href="#contact" class="cta">Get a Quote</a>
   </header>
 
