Fixed the andriod issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>GLOBEFARMS VENTURES</title>
   <link rel="icon" href="images/GLOBEFARM VENTURES LOGO.jpg" type="image/png">
   <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
       </span>
     </div>
 
-    <!-- Hamburger menu icon (visibile onlu on mobile) -->
+    <!-- Hamburger menu icon (visibile only on mobile) -->
      <button class="hamburger" id="hamburgerBtn">
       <span></span>
       <span></span>
@@ -25,7 +25,7 @@
 
     <nav class="nav-links" id="navMenu">
       <!-- <button class="close-btn" id="closeBtn">✖</button> -->
-      <a href="#">Home</a>
+      <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#products">Products</a>
       <a href="#contact">Contact</a>
@@ -35,9 +35,11 @@
     <a href="#contact" class="cta">Get a Quote</a>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="home">
     <h1>Premium Quality African Food Products</h1>
-    <p>Plantain Flour • Yam Flour • Garri • Cassava Flour • Palm Oil</p>
+    <p> GLF Unripe Plantain Flour • GLF Yam Flour • GLF Garri <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
+
+    <p>All Products approved by NAFDAC</p>
 
     <a href="#products" class="btn-primary">Explore Products</a>
   </section>
@@ -69,7 +71,7 @@
 
       </div> -->
       <div class="product-card">
-        Unripe Plantain Flour
+        GLF Unripe Plantain Flour
         <div class="track">
           <img src="images/unripe-plantain-flour-images/plantain-flour-1.jpg" alt="">
           <img src="images/unripe-plantain-flour-images/plantain-flour-2.jpg" alt="">
@@ -79,7 +81,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        Yam Flour
+        GLF Yam Flour
         <div class="track">
           <img src="images/yam-flour-images/yam-flour-1.jpg" alt="">
           <img src="images/yam-flour-images/yam-flour-2.jpg" alt="">
@@ -88,7 +90,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        Cassava Flour
+        GLF Cassava Flour
         <div class="track">
           <img src="images/cassava-flour-images/cassava-flour-1.jpg" alt="">
           <img src="images/cassava-flour-images/cassava-flour-2.jpg" alt="">
@@ -98,7 +100,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        Garri
+        GLF Garri
         <div class="track">
           <img src="images/garri-images/garri-1.jpg" alt="">
           <img src="images/garri-images/garri-2.jpg" alt="">
@@ -110,7 +112,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        Palm Oil
+        GLF Palm Oil
         <div class="track">
           <img src="images/palm-oil-images/palm-oil-1.jpg" alt="">
           <img src="images/palm-oil-images/palm-oil-2.jpg" alt="">
