More Updates coming up

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>GLOBEFARMS VENTURES</title>
   <link rel="icon" href="images/GLOBEFARM VENTURES LOGO.jpg" type="image/png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
   <header class="navbar">
@@ -39,14 +40,14 @@
     <h1>Premium Quality African Food Products</h1>
     <p> GLF Unripe Plantain Flour • GLF Yam Flour • GLF Garri <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
 
-    <p>All Products approved by NAFDAC</p>
+    <p><span style="font-weight: 600;">All Products approved by NAFDAC</span></p>
 
     <a href="#products" class="btn-primary">Explore Products</a>
   </section>
 
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including unripe plantain flour, palm oil, GLF Garri Ijebu, Yam flour (amala), and cassava flour(Lafu/White Amala).</p>
+    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including: <span style="font-weight: 700; font-style: italic;">GLF Unripe Plantain Flour, GLF Palm Oil, GLF Ijebu Garri, GLF Yam Flour (amala) and GLF Cassava Flour(Lafu/White Amala).</span></p>
     <p>Our products are carefully processed under strict hygiene and safety standards to preserve their nutritional value, freshness and taste, ensuring that they meet the needs of supermarkets, retail outlets, households and final consumers across Nigeria and beyond.</p>
   </section>
 
@@ -124,6 +125,105 @@
       </div>
     </div>
   </section>
+
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <p>Ready to order a product or have questions about our services? Reach out to us and we'll get back to you as soon as possible</p>
+
+    <h3>Get In Touch</h3>
+    <p style="text-align: left;">We would love to hear from you! Whether you have a question about our services, pricing or availability, we are here to help. Fill out the form or contact us directly:</p>
+
+    <div class="contact-items instagram">
+      <a href="" class="contact-item">
+        <div class="icon-wrapper">
+          <i class="fab fa-instagram contact-icon"></i>
+        </div>
+        <div class="contact-info">
+          <span class="contact-label">Instagram</span>
+          <span class="contact-value">
+            @globefarmsventures
+          </span>
+        </div>
+      </a>
+
+      <a href="" class="contact-item Tik-tok">
+        <div class="icon-wrapper" style="background: linear-gradient(135deg, #343434, #f9fbdf);">
+          <i class="fab fa-tiktok contact-icon" style="color: white;"></i>
+        </div>
+        <div class="contact-info">
+          <span class="contact-label">Tik Tok</span>
+          <span class="contact-value">
+            @globefarmsventures
+          </span>
+        </div>
+      </a>
+
+      <a href="" class="contact-item Email">
+        <div class="icon-wrapper" style="background: linear-gradient(135deg, #e8f5e8, #d4edda);">
+          <i class="fas fa-envelope" style="color: #28a745;"></i>
+        </div>
+        <div class="contact-info">
+          <span class="contact-label">Email</span>
+          <span class="contact-value">
+            info@globefarmsventures.com
+          </span>
+        </div>
+      </a>
+
+      <a href="" class="contact-item Phone">
+        <div class="icon-wrapper" style="background: linear-gradient(135deg, #e3f2fd, #bbdefb);">
+          <i class="fas fa-phone contact-icon" style="color: #007bff;"></i>
+        </div>
+        <div class="contact-info">
+          <span class="contact-label">Phone</span>
+          <span class="contact-value">
+            +1 236 998 4817
+          </span>
+        </div>
+      </a>
+
+      <div class="contact-item Address">
+        <div class="icon-wrapper" style="background: linear-gradient(135deg, #fff8e1, #ffecb3);">
+          <i class="fas fa-map-marker-alt contact-icon" style="color: #fd7e14;"></i>
+        </div>
+        <div class="contact-info">
+          <span class="contact-label">Address</span>
+          <span class="contact-value">
+            Abuja, Nigeria.
+          </span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-about">
+        <h3>GLOBEFARMS VENTURES LTD.</h3>
+        <p>Processing quality farm by-products into value-added products for everyday use.</p>
+      </div>
+
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-contact">
+        <h4>Contact Us</h4>
+        <p>Email: <a href="mailto:infoe@globefarmsventures.com">info@farmsventures.com</a></p>
+        <p>Phone: +1 236 998 4817</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>© 2025 GLOBEFARMS VENTURES. All Rights Reserved.</p>
+      <small>DEVELOPED & DESIGNED BY AFOLABI DAVID</small>
+    </div>
+  </footer>
 
   <button id="scrollTopBtn" title="Go to top">↑</button>
 
