--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       </div> -->
       <div class="product-card">
-        GLF Unripe Plantain Flour
+        <span style="font-size: 15px;">GLF Unripe Plantain Flour</span>
         <div class="track">
           <img src="images/unripe-plantain-flour-images/plantain-flour-1.jpg" alt="">
           <img src="images/unripe-plantain-flour-images/plantain-flour-2.jpg" alt="">
