--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
   <header class="navbar">
     <div class="logo-container">
       <img class="logo" src="images/GLOBEFARM VENTURES LOGO.jpg" alt="Global Farms Logo">
-      <span class="company-name">
-        GLOBEFARMS<br> <span class="ventures-text">VENTURES</span>
-      </span>
+       <div class="company-name">
+        GLOBEFARMS<br> <span class="ventures-text">
+        VENTURES
+        </span>
+        <small class="endorsement">
+          Endorsed by <br>Federal Ministry of Industry, Trade and Investment.
+        </small>
+      </div>
     </div>
 
     <!-- Hamburger menu icon (visibile only on mobile) -->
@@ -40,14 +45,14 @@
     <h1>Premium Quality African Food Products</h1>
     <p> GLF Unripe Plantain Flour • GLF Yam Flour • GLF Garri <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
 
-    <p><span style="font-weight: 600;">All Products approved by NAFDAC</span></p>
+    <p><span style="font-weight: 600;">All Products approved by NATIONAL AGENCY FOR FOOD AND DRUG ADMINISTRATION AND CONTROL (NAFDAC)</span></p>
 
     <a href="#products" class="btn-primary">Explore Products</a>
   </section>
 
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including: <span style="font-weight: 700; font-style: italic;">GLF Unripe Plantain Flour, GLF Palm Oil, GLF Ijebu Garri, GLF Yam Flour (amala) and GLF Cassava Flour(Lafu/White Amala).</span></p>
+    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including: <span style="font-weight: 700; font-style: italic;">GLF Unripe Plantain Flour, GLF Palm Oil, GLF Ijebu Garri, GLF Yam Flour (Amala) and GLF Cassava Flour(Lafu/White Amala).</span></p>
     <p>Our products are carefully processed under strict hygiene and safety standards to preserve their nutritional value, freshness and taste, ensuring that they meet the needs of supermarkets, retail outlets, households and final consumers across Nigeria and beyond.</p>
   </section>
 
@@ -101,7 +106,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        GLF Garri
+        GLF Ijebu Garri
         <div class="track">
           <img src="images/garri-images/garri-1.jpg" alt="">
           <img src="images/garri-images/garri-2.jpg" alt="">
