--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h1>Premium Quality African Food Products</h1>
     <p> GLF Unripe Plantain Flour • GLF Yam Flour • GLF Garri <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
 
-    <p><span style="font-weight: 600;">All Products approved by NATIONAL AGENCY FOR FOOD AND DRUG ADMINISTRATION AND CONTROL (NAFDAC)</span></p>
+    <p><span style="font-weight: 600;">All Products approved by the NATIONAL AGENCY FOR FOOD AND DRUG ADMINISTRATION AND CONTROL (NAFDAC)</span></p>
 
     <a href="#products" class="btn-primary">Explore Products</a>
   </section>
