--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="hero" id="home">
     <h1>Premium Quality African Food Products</h1>
-    <p> GLF Unripe Plantain Flour • GLF Yam Flour • GLF Garri <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
+    <p> GLF Unripe Plantain Flour • GLF Yam Flour <span style="white-space: nowrap;">• GLF Garri Ijebu</span> <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
 
     <p><span style="font-weight: 600;">All Products approved by the NATIONAL AGENCY FOR FOOD AND DRUG ADMINISTRATION AND CONTROL (NAFDAC)</span></p>
 
@@ -52,7 +52,7 @@
 
   <section id="about" class="about">
     <h2>About Us</h2>
-    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including: <span style="font-weight: 700; font-style: italic;">GLF Unripe Plantain Flour, GLF Palm Oil, GLF Ijebu Garri, GLF Yam Flour (Amala) and GLF Cassava Flour(Lafu/White Amala).</span></p>
+    <p>Globefarms Ventures (GLF FOODs) is an agro-allied enterprise committed to the secondary production and value addition of agricultural commodities in Nigeria. The company is duly approved by the National Agency for Food and Drug Administration and Control (NAFDAC) to process, package and distribute high-quality staple food products including: <span style="font-weight: 700; font-style: italic;">GLF Unripe Plantain Flour, GLF Palm Oil, GLF Garri Ijebu, GLF Yam Flour (Amala) and GLF Cassava Flour(Lafu/White Amala).</span></p>
     <p>Our products are carefully processed under strict hygiene and safety standards to preserve their nutritional value, freshness and taste, ensuring that they meet the needs of supermarkets, retail outlets, households and final consumers across Nigeria and beyond.</p>
   </section>
 
@@ -106,7 +106,7 @@
         <button class="next">▶</button>
       </div>
       <div class="product-card">
-        GLF Ijebu Garri
+        GLF Garri Ijebu
         <div class="track">
           <img src="images/garri-images/garri-1.jpg" alt="">
           <img src="images/garri-images/garri-2.jpg" alt="">
