--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <section class="hero" id="home">
     <h1>Premium Quality African Food Products</h1>
-    <p> GLF Unripe Plantain Flour • GLF Yam Flour <span style="white-space: nowrap;">• GLF Garri Ijebu</span> <span style="white-space: nowrap;">• GLF Cassava Flour </span>• GLF Palm Oil</p>
+    <p> GLF Unripe Plantain Flour • GLF Yam Flour (Amala) <span style="white-space: nowrap;">• GLF Garri Ijebu</span> <span style="white-space: nowrap;">• GLF Cassava Flour (White Amala) </span>• GLF Palm Oil</p>
 
     <p><span style="font-weight: 600;">All Products approved by the NATIONAL AGENCY FOR FOOD AND DRUG ADMINISTRATION AND CONTROL (NAFDAC)</span></p>
 
